BUG 6814 Adjustment suggest, adding a scrollbar for display more items.

--- a/workflow/public_html/skins/green/style.css
+++ b/workflow/public_html/skins/green/style.css
@@ -1524,6 +1524,7 @@ div.autosuggest
 	background-position: top;
 	background-repeat: no-repeat;
 	padding: 8px 2px 0 3px;
+  overflow: auto;
 	z-index:1000;
 }
 
